# Pyrlang

./: .gitignore  Makefile  README.md  setup.py
Pyrlang/: __init__.py  gen.py  net_kernel.py  node.py  process.py  rex.py  term.py
examples/: 01_simple_node.py  02_registered_process.py
examples/elixir/: 10_test.py
native_src/: CMakeLists.txt  Makefile  byte_codec.h  library.cpp  library.h
pyrlang/: gen.py  net_kernel.py  node.py  process.py  rex.py
pyrlang/term/: __init__.py  pid.py  reference.py
test/: dist_etf_decode_test.py  dist_etf_transitive_test.py
